Fixing #17 - map being shifted left

--- a/sources/css/app.css
+++ b/sources/css/app.css
@@ -40,10 +40,6 @@ h2 {
   font-size: 1.5rem;
 }
 
-.map {
-  height: 480px;
-  /*width: 480px;*/
-}
 /* section.add-view h1,
 section.dashboard-view ul,
 section.sessions-view ul,
