--- a/sources/css/session.css
+++ b/sources/css/session.css
@@ -1,12 +1,10 @@
 .session-view h1,
 .session-view div {
-  width: 90%;
   margin-left: 5%;
 }
 .session-view div.dc-chart,
 .session-view div.map {
   margin: 0;
-  /*width: 100%*/
 }
 .session-totals-container,
 .accordeon section.map {
@@ -68,8 +66,8 @@
 h3 {
   background-color: cadetblue;
 }
-.map {
-  width: 600px;
+.session-view div .map {
+  width: inherit;;
   height: 500px;
 }
 table {
