--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -119,7 +119,7 @@ button.big {
 }
 
 .width-half {
-  width: 45%;
+  width: 50%;
 }
 .box {
   border: 1px solid red;
